--- a/config.sh.dist
+++ b/config.sh.dist
@@ -1,3 +1,3 @@
 #! /bin/sh
 
-export GITX_BROWSER="google-chrome" # google-chrome/firefox/...
+export GHX_BROWSER="google-chrome" # google-chrome/firefox/...
